syntax = "proto3";
package gitopia.gitopia.gitopia;

option go_package = "github.com/gitopia/gitopia/x/gitopia/types";

import "gogoproto/gogo.proto";

message PullRequest {
  string creator = 1;
  uint64 id = 2;
  uint64 iid = 3; 
  string title = 4; 
  string state = 5; 
  string description = 6; 
  bool locked = 7; 
  repeated uint64 comments = 8; 
  repeated uint64 issues = 9; 
  repeated string labels = 10; 
  repeated string assignees = 11; 
  repeated string reviewers = 12; 
  bool draft = 13; 
  int64 createdAt = 14; 
  int64 updatedAt = 15; 
  int64 closedAt = 16; 
  string closedBy = 17; 
  int64 mergedAt = 18; 
  string mergedBy = 19; 
  string mergeCommitSha = 20; 
  bool maintainerCanModify = 21; 
  string headBranch = 22;
  uint64 headRepoId = 23; 
  string baseBranch = 24;
  uint64 baseRepoId = 25; 
  string extensions = 26; 
}